Update the pom.xml file to add junit5 and testfx-junit5 dependencies